# lilapu

./: .gitignore  Convex Starter Cheat Sheet 30e4b576ad2081119af0c2868093b770.md  Lilapu Market Research  PRD.md
.github/workflows/: build-ocr.yml  desktop-release.yml
desktop/: convex  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  chart-theme.ts  crypto.ts  globals.css  main.tsx
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  lib.rs  proxy.rs  screenshot.rs  system_audio.rs  tray.rs
desktop/src/components/: CameraOCR.tsx  ChartRenderer.tsx  ChatPanel.tsx  EncryptionPasswordDialog.tsx  NotesPanel.tsx  ProjectSidebar.tsx  (+3 more)
docs/: prd_ad_agents.md  prd_desktop_app.md  prd_secure_ai_agent.md
elevenlabs-kb/: 01-produkt-i-funkcje.md  02-bezpieczenstwo.md  03-faq-i-konkurencja.md
runpod/: Dockerfile  README.md  handler.py
runpod-ocr/: Dockerfile  README.md  handler.py
runpod-parakeet/: Dockerfile  README.md  handler.py
runpod-whisper-ws/: Dockerfile  README.md  RUNPOD_RESTART.md  server.py
scripts/: start-ai.sh  stop-ai.sh
web/: next.config.ts  package-lock.json  package.json
web/convex/: ai.ts  conversations.ts  folders.ts  http.ts  messages.ts  notes.ts  projects.ts  rag.ts  ragHelpers.ts  schema.ts  transcriptions.ts  userKeys.ts  validation.ts  waitlist.ts  wsToken.ts
web/public/: manifest.json  sw.js
web/src/: instrumentation-client.ts  middleware.ts
(+33 files in other folders)
