[package]
name = "desktop"
version = "0.1.0"
description = "Lilapu — Prywatny Asystent Wiedzy (Desktop)"
authors = ["Lilapu"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"
hound = "3.5"

# Thread-safe state
parking_lot = "0.12"

# Base64 encoding for audio data
base64 = "0.22"


# Screenshot capture
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-clerk = "0.1.0"
tauri-plugin-http = "2.5.7"
tauri-plugin-store = "2.4.2"

# macOS system audio capture via ScreenCaptureKit
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"
